# VoT

./: .gitignore  main.py  pyproject.toml
notebooks/1_model_dev/: 1a_llama.ipynb  1b_DiT.ipynb  1c_flow.ipynb  2_mixture_of_transformers.ipynb  2_transfusion.ipynb  2a_transfusion_image_only.ipynb  4_tv2tv.ipynb  tv2tv.ipynb
vot_utils/: data.py
